# XTILO

./: .gitignore  Direction.cc  Direction.hh  README.md  Rule.cc  Rule.hh  State.cc  State.hh  TuringMachine.cc  TuringMachine.hh  UML.mdj  main.cc  meson.build
.reuse/: dep5
examples/: add.txt  add2num.txt  anbn.txt  mul.txt  palindrome.txt  parentheses.txt  unary2bin.txt
