# SPDX-FileCopyrightText: 2023 Ondřej Surý
#
# SPDX-License-Identifier: WTFPL

project('turing-machine', 'cpp', default_options : ['cpp_std=gnu++20'])
executable('tm', ['Rule.cc',
                  'State.cc',
                  'Direction.cc',
                  'TuringMachine.cc',
                  'main.cc'])
